--- a/DirectoryNavigationBar.xaml
+++ b/DirectoryNavigationBar.xaml
@@ -9,28 +9,44 @@
              mc:Ignorable="d"
              DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="boolToVis"/>
+        <local:InverseBooleanToVisibilityConverter x:Key="invBoolToVis"/>
         <local:StringWithoutSlashConverter x:Key="strWithoutSlash"/>
     </UserControl.Resources>
-    <Border CornerRadius="4" BorderBrush="WhiteSmoke" BorderThickness="1">
-        <ItemsControl ItemsSource="{Binding DirectoryNavigationItems}" VerticalAlignment="Center" Margin="4" HorizontalAlignment="Left">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right"/>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate DataType="{x:Type io:DirectoryInfo}">
-                    <StackPanel Orientation="Horizontal" TextElement.Foreground="WhiteSmoke">
-                        <TextBlock x:Name="Separator" Text="\" VerticalAlignment="Center"/>
-                        <Button Style="{StaticResource FlatButton}" Content="{Binding Name, Converter={StaticResource strWithoutSlash}}" Command="{Binding NavigateDirectoryCommand, RelativeSource={RelativeSource AncestorType={x:Type local:DirectoryNavigationBar}}}" VerticalAlignment="Center" Foreground="WhiteSmoke"/>
-                    </StackPanel>
-                    <DataTemplate.Triggers>
-                        <DataTrigger Binding="{Binding Parent}" Value="{x:Null}">
-                            <Setter TargetName="Separator" Property="Visibility" Value="Collapsed"/>
-                        </DataTrigger>
-                    </DataTemplate.Triggers>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-    </Border>
+    <DockPanel TextElement.Foreground="WhiteSmoke">
+        <DockPanel.Resources>
+            <Style TargetType="{x:Type Button}" BasedOn="{StaticResource FlatButton}">
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="DockPanel.Dock" Value="Left"/>
+            </Style>
+        </DockPanel.Resources>
+        <Button Command="{Binding NavigateBackCommand}" Content="{local:Icon arrow-left-thick}"/>
+        <Button Command="{Binding NavigateForwardCommand}" Content="{local:Icon arrow-right-thick}"/>
+        <Button Command="{Binding NavigateUpCommand}" Content="{local:Icon arrow-up-thick}"/>
+        <Border CornerRadius="4" BorderBrush="WhiteSmoke" Background="Transparent" BorderThickness="1" VerticalAlignment="Center" Margin="4,0,0,0">
+            <Grid Background="Transparent" MouseDown="GridMouseDown">
+                <TextBox x:Name="PathTextBox" VerticalAlignment="Center" Background="Yellow" Margin="5" Visibility="{Binding TextBoxVisible, Converter={StaticResource boolToVis}}" Style="{StaticResource FlatTextBox}"/>
+                <ItemsControl ItemsSource="{Binding DirectoryNavigationItems}" VerticalAlignment="Center" Margin="4" HorizontalAlignment="Left" Visibility="{Binding TextBoxVisible, Converter={StaticResource invBoolToVis}}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate DataType="{x:Type io:DirectoryInfo}">
+                            <StackPanel Orientation="Horizontal" TextElement.Foreground="WhiteSmoke">
+                                <TextBlock x:Name="Separator" Text="\" VerticalAlignment="Center"/>
+                                <Button Style="{StaticResource FlatButton}" Content="{Binding Name, Converter={StaticResource strWithoutSlash}}" Command="{Binding NavigateDirectoryCommand, RelativeSource={RelativeSource AncestorType={x:Type local:DirectoryNavigationBar}}}" VerticalAlignment="Center" Foreground="WhiteSmoke"/>
+                            </StackPanel>
+                            <DataTemplate.Triggers>
+                                <DataTrigger Binding="{Binding Parent}" Value="{x:Null}">
+                                    <Setter TargetName="Separator" Property="Visibility" Value="Collapsed"/>
+                                </DataTrigger>
+                            </DataTemplate.Triggers>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </Grid>
+        </Border>
+    </DockPanel>
 </UserControl>
