--- a/TitleBar.xaml
+++ b/TitleBar.xaml
@@ -23,6 +23,7 @@
                     </Style.Triggers>
                 </Style>
             </DockPanel.Style>
+            <Image Margin="4,0" VerticalAlignment="Center" DockPanel.Dock="Left" Source="{Binding Icon, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" Width="16" Height="16" Stretch="Uniform" StretchDirection="DownOnly"/>
             <Button Command="SystemCommands.CloseWindowCommand" Content="{local:Icon window-close, Width=20, Height=20}" BorderBrush="OrangeRed" ToolTip="Close"/>
             <Button Command="SystemCommands.RestoreWindowCommand" Content="{local:Icon window-restore, Width=20, Height=20}" ToolTip="Restore">
                 <Button.Style>
