--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,10 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ImageCabinet"
+        xmlns:ui="clr-namespace:ImageCabinet.UIHelper"
         mc:Ignorable="d"
         Title="ImageCabinet" Height="450" Width="800"
         WindowStyle="None"
-        Icon="{local:Icon folder-multiple-image, Width=128, Height=128, Fill=WhiteSmoke}"
+        Icon="{ui:Icon folder-multiple-image, Width=128, Height=128, Fill=WhiteSmoke}"
         Background="DarkSlateGray">
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="{Binding ActualHeight, ElementName=TitleBar}"/>
