--- a/App.xaml
+++ b/App.xaml
@@ -6,12 +6,12 @@
     <Application.Resources>
         <SolidColorBrush x:Key="SemiTransparentWhiteSmoke" Color="WhiteSmoke" Opacity="0.2"/>
 
-        <Style x:Key="FlatButton" TargetType="{x:Type Button}">
+        <Style x:Key="FlatButton" TargetType="{x:Type ButtonBase}">
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderBrush" Value="{StaticResource SemiTransparentWhiteSmoke}"/>
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
+                    <ControlTemplate TargetType="{x:Type ButtonBase}">
                         <Grid Background="{TemplateBinding Background}">
                             <ContentPresenter Margin="{TemplateBinding Padding}"/>
                         </Grid>
