--- a/App.xaml
+++ b/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ImageCabinet"
+             xmlns:ui="clr-namespace:ImageCabinet.UIHelper"
              Startup="Application_Startup">
     <Application.Resources>
         <SolidColorBrush x:Key="SemiTransparentWhiteSmoke" Color="WhiteSmoke" Opacity="0.2"/>
@@ -27,6 +28,7 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+        
         <Style x:Key="FlatTextBox" TargetType="{x:Type TextBox}">
             <Setter Property="Foreground" Value="WhiteSmoke"/>
             <Setter Property="CaretBrush" Value="{Binding Foreground, RelativeSource={RelativeSource Self}}"/>
@@ -38,6 +40,67 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+        </Style>
+
+        <Style TargetType="{x:Type local:TagButton}">
+            <Style.Resources>
+                <ui:MultiplicationConverter x:Key="multiply"/>
+                <ui:BrushToTransmittantBrushConverter x:Key="brushToTransmittent"/>
+            </Style.Resources>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="Padding" Value="8,4,16,4"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type local:TagButton}">
+                        <Grid>
+                            <Grid.ToolTip>
+                                <TextBlock Text="{TemplateBinding ToolTipText}"/>
+                            </Grid.ToolTip>
+                            <Border x:Name="BackgroundBorder" BorderThickness="1" CornerRadius="{Binding ActualHeight, RelativeSource={RelativeSource Self}, Converter={StaticResource multiply}, ConverterParameter=0.5}" Background="{Binding Background, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource brushToTransmittent}, ConverterParameter=0.9}"/>
+                            <StackPanel Orientation="Horizontal" Margin="{TemplateBinding Padding}">
+                                <Image Source="{TemplateBinding Icon}" Width="20" Height="20" Margin="0,0,4,0" VerticalAlignment="Center">
+                                    <Image.Effect>
+                                        <ui:RecolorEffect Color="{Binding Foreground.Color, RelativeSource={RelativeSource TemplatedParent}}"/>
+                                    </Image.Effect>
+                                </Image>
+                                <ContentPresenter Content="{TemplateBinding Content}" VerticalAlignment="Center"/>
+                            </StackPanel>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="BackgroundBorder" Property="Background" Value="{Binding Background, RelativeSource={RelativeSource TemplatedParent}}"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="BackgroundBorder" Property="Background" Value="{Binding Background, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource brushToTransmittent}, ConverterParameter=0.8}"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="False">
+                                <Setter TargetName="BackgroundBorder" Property="Effect">
+                                    <Setter.Value>
+                                        <DropShadowEffect ShadowDepth="1"/>
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding CurrentFilterMode, RelativeSource={RelativeSource Self}}" Value="{x:Static local:TagButton+FilterMode.Include}">
+                    <Setter Property="Background" Value="LightGreen"/>
+                    <Setter Property="Icon" Value="{ui:Icon tag-check, 20, ForceProvideImageSource=True}"/>
+                    <Setter Property="ToolTipText" Value="Show only images with this tag"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding CurrentFilterMode, RelativeSource={RelativeSource Self}}" Value="{x:Static local:TagButton+FilterMode.Exclude}">
+                    <Setter Property="Background" Value="LightPink"/>
+                    <Setter Property="Icon" Value="{ui:Icon tag-off-outline, 20, ForceProvideImageSource=True}"/>
+                    <Setter Property="ToolTipText" Value="Show only images without this tag"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding CurrentFilterMode, RelativeSource={RelativeSource Self}}" Value="{x:Static local:TagButton+FilterMode.None}">
+                    <Setter Property="Background" Value="Gray"/>
+                    <Setter Property="Icon" Value="{ui:Icon tag-outline, 20, ForceProvideImageSource=True}"/>
+                    <Setter Property="ToolTipText" Value="Show images regardless of this tag"/>
+                </DataTrigger>
+            </Style.Triggers>
         </Style>
     </Application.Resources>
 </Application>
