--- a/App.xaml
+++ b/App.xaml
@@ -5,11 +5,13 @@
              xmlns:ui="clr-namespace:ImageCabinet.UIHelper"
              Startup="Application_Startup">
     <Application.Resources>
-        <SolidColorBrush x:Key="SemiTransparentWhiteSmoke" Color="WhiteSmoke" Opacity="0.2"/>
-
         <Style x:Key="FlatButton" TargetType="{x:Type ButtonBase}">
+            <Style.Resources>
+                <ui:BrushToTransmittantBrushConverter x:Key="brushToTransmittent"/>
+            </Style.Resources>
+            <Setter Property="Foreground" Value="{DynamicResource DefaultForeground}"/>
             <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderBrush" Value="{StaticResource SemiTransparentWhiteSmoke}"/>
+            <Setter Property="BorderBrush" Value="{Binding Foreground, RelativeSource={RelativeSource Self}, Converter={StaticResource brushToTransmittent}, ConverterParameter=0.2}"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ButtonBase}">
@@ -30,7 +32,7 @@
         </Style>
         
         <Style x:Key="FlatTextBox" TargetType="{x:Type TextBox}">
-            <Setter Property="Foreground" Value="WhiteSmoke"/>
+            <Setter Property="Foreground" Value="{DynamicResource DefaultForeground}"/>
             <Setter Property="CaretBrush" Value="{Binding Foreground, RelativeSource={RelativeSource Self}}"/>
             <Setter Property="Cursor" Value="IBeam"/>
             <Setter Property="Template">
@@ -60,7 +62,7 @@
                             <StackPanel Orientation="Horizontal" Margin="{TemplateBinding Padding}">
                                 <Image Source="{TemplateBinding Icon}" Width="20" Height="20" Margin="0,0,4,0" VerticalAlignment="Center">
                                     <Image.Effect>
-                                        <ui:RecolorEffect Color="{Binding Foreground.Color, RelativeSource={RelativeSource TemplatedParent}}"/>
+                                        <ui:RecolorEffect Color="{Binding Foreground.Color, RelativeSource={RelativeSource TemplatedParent}, FallbackValue={StaticResource DefaultForegroundColor}}"/>
                                     </Image.Effect>
                                 </Image>
                                 <ContentPresenter Content="{TemplateBinding Content}" VerticalAlignment="Center"/>
