--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ImageCabinet"
         xmlns:ui="clr-namespace:ImageCabinet.UIHelper"
+        xmlns:settings="clr-namespace:ImageCabinet.Settings"
         mc:Ignorable="d"
         Title="ImageCabinet" Height="450" Width="800" MinHeight="{Binding ActualHeight, ElementName=TitleBar}"
         WindowStyle="None"
@@ -19,11 +20,12 @@
             <DataTemplate x:Key="SettingsButtonTemplate">
                 <Grid>
                     <Button x:Name="SettingsButton" Content="{ui:Icon wrench, 12}" Padding="4" WindowChrome.IsHitTestVisibleInChrome="True" ToolTip="Settings" Style="{StaticResource FlatButton}" ui:UIHelper.OpenPopupOnClick="{Binding ElementName=SettingsPopup}"/>
-                    <Popup x:Name="SettingsPopup" PlacementTarget="{Binding ElementName=SettingsButton}" StaysOpen="False" AllowsTransparency="True">
-                        <Border Tag="{DynamicResource DefaultBackground}" Background="{Binding Tag, RelativeSource={RelativeSource Self}, Converter={StaticResource valueAdjust}, ConverterParameter=0.1}" CornerRadius="4" Width="100" Height="100" Margin="4">
+                    <Popup x:Name="SettingsPopup" PlacementTarget="{Binding ElementName=SettingsButton}" StaysOpen="True" AllowsTransparency="True">
+                        <Border Tag="{DynamicResource DefaultBackground}" Background="{Binding Tag, RelativeSource={RelativeSource Self}, Converter={StaticResource valueAdjust}, ConverterParameter=0.1}" CornerRadius="4" Margin="4">
                             <Border.Effect>
                                 <DropShadowEffect ShadowDepth="1" Direction="270" BlurRadius="10" Color="{DynamicResource ShadowColor}"/>
                             </Border.Effect>
+                            <settings:SettingsControl Margin="12"/>
                         </Border>
                     </Popup>
                 </Grid>
